- Add messages component - Add hero service - Use of() operator to emit heroes array as observable - Add hero detail component - Use property binding to pass 'selectedHero' from heroes component to hero detail component: [hero]="selectedHero" - Use ngOnInit lifecycle hook to fetch HEROES data in heroes component

--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -13,6 +13,7 @@
     <span>Got nothing for you brah!</span>
   }
 
+<!--  Old way of doing loop -->
 <!--  <li *ngFor="let hero of heroes">-->
 <!--    <button type="button" (click)="onSelect(hero)">-->
 <!--      <span class="badge">{{ hero.id }}</span>-->
@@ -21,13 +22,5 @@
 <!--  </li>-->
 </ul>
 
-@if(selectedHero){
-  <div>
-    <h2>{{ selectedHero.name | uppercase }} Details</h2>
-    <div>id: {{ selectedHero.id }}</div>
-    <div>
-      <label for="hero-name">Hero name: </label>
-      <input id="hero-name" [(ngModel)]="selectedHero.name" placeholder="name">
-    </div>
-  </div>
-}
+<!-- Property Binding: Bind 'selectedHero' to child component's 'hero' property -->
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
