-Implement message service with messages array, and add & clear methods -Use message service from hero service to note when HEROES are fetched -Use message service from heroes component to note when hero is selected from the list -Display messages in the messages component using message service

--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,1 +1,9 @@
-<p>messages works!</p>
+@if(messageService.messages.length){
+  <div>
+    <h2>Messages</h2>
+    <button type="button" class="clear" (click)="messageService.clear()">Clear Messages</button>
+    @for (message of messageService.messages; track message){
+      <div>{{message}}</div>
+    }
+  </div>
+}
