--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -7,6 +7,7 @@
       <input id="hero-name" [(ngModel)]="hero.name" placeholder="name">
     </div>
     <button type="button" (click)="goBack()">go back</button>
+    <button type="button" (click)="save()">save</button>
   </div>
 } @else {
   <span>Got nothing for you brah!</span>
