--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,4 +1,12 @@
 <h2>My Heroes</h2>
+
+<div>
+  <label for="new-hero">Hero name: </label>
+  <input id="new-hero" #heroName />
+
+  <button type="button" (click)="addHero(heroName.value); heroName.value=''">Add hero</button>
+</div>
+
 <ul class="heroes">
   @for(hero of heroes; track hero.id){
     <li>
@@ -12,6 +20,7 @@
       <a routerLink="/detail/{{hero.id}}">
         <span class="badge">{{hero.id}}</span> {{hero.name}}
       </a>
+      <button type="button" class="delete" title="delete hero" (click)="deleteHero(hero)">x</button>
     </li>
   } @empty {
     <span>Got nothing for you brah!</span>
